--- a/rock-paper-scissors/style.css
+++ b/rock-paper-scissors/style.css
@@ -23,6 +23,23 @@ li {
     /* padding-left: 60px; */
 }
 
+.liShake {
+    animation: shake .5s linear infinite;
+}
+
+@keyframes shake {
+    25% {
+        transform: rotate(7deg);
+    }
+    75% {
+        transform: rotate(-7deg);
+    }
+    50%,
+    100% {
+        transform: rotate(0);
+    }
+}
+
 h1 {
     margin: 30px;
     font-family: 'Ubuntu', sans-serif;
